# rkb-lib

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  structure.toml
.github/workflows/: ci.yml
src/rkb_lib/: cli.py  config.py  genres.py  playlist.py
tests/: conftest.py  test_config.py  test_genres.py  test_playlist.py
