[project]
name = "rkb-lib"
version = "0.1.0"
description = "Rekordbox library management tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrekordbox>=0.4.4",
    "setuptools>=82.0.1",
    "mutagen>=1.47.0",
    "rich>=13.0.0",
]

[project.scripts]
rkb = "rkb_lib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rkb_lib"]
